# shipment-tracking-api

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.dev.yml  pylint_django_plugin.py  pyproject.toml
.github/workflows/: deploy.yml  django.yml  mypy.yml
scripts/: entrypoint.sh
src/: manage.py
src/backend/: settings.py  urls.py  views.py  wsgi.py
src/backend/middleware/: request_log.py  thread_local.py
src/parcel/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/parcel/management/commands/: populate_shipment_data.py
src/parcel/migrations/: 0001_initial.py
src/resources/: shipment_data.csv
src/tests/: conftest.py
src/tests/integration_tests/: test_ping.py
src/tests/integration_tests/parcel/: conftest.py  test_api.py
src/tests/integration_tests/weather/: test_api.py
src/tests/unit_tests/middleware/: conftest.py  test_request_log.py  test_thread_local.py
src/tests/unit_tests/utils/: conftest.py  test_base_models.py
src/tests/unit_tests/weather/: test_weather_api_service.py
src/utils/: base_models.py  base_views.py  cache_utils.py  helpers.py  logger_settings.py  permissions.py
src/weather/: serializers.py  urls.py  views.py
src/weather/services/: weather_api.py
terraform/: ecs.tf  iam.tf  lb.tf  main.tf  networking.tf  rds.tf  variables.tf
